Рефакторинг классов ГИС, добавил многопоточку. Всё работает